src/test/deca/syntax/valid/unaexp.deca
// Description:
//    Test de unaexp
//
// Resultats:
//    affiche -3 et false
//
// Historique:
//    cree le 01/01/2021

{
    println(-3);
    println(!true);
}
